# omnifetcher

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml  requirements.txt
adapt_fetch/: __init__.py  server.py  start.py
adapt_fetch/easy_crawler/: __init__.py  easy_crawler.py
adapt_fetch/easy_pdf_crawler/: easy_pdf_crawler.py
adapt_fetch/jina/: jina_router.py
adapt_fetch/pdf_crawler/: pdf_crawler.py
adapt_fetch/playwright_service/: playwright_router.py  playwright_router_helper.py
adapt_fetch/proxy/: change_proxy.py  change_proxy_assist.py  double_hop_proxy.py
adapt_fetch/utils/: concurrent_strategies.py  logging_setup.py  tackle_huge_html.py
benchmarks/: run_benchmark.py
config/: scholar_proxy_config.yaml  smart_detector_config.json
docs/: BENCHMARKS.md  BENCHMARKS.zh-CN.md
docs/assets/benchmarks/feishu/: manifest.json
examples/: fetch_one.py
