[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adapt-fetch"
version = "0.1.0"
description = "Adaptive URL fetch engine with auto-learning routing for RAG and agents"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "LightRead Team" }]
keywords = ["crawler", "scraping", "playwright", "rag", "url-fetch", "adaptive"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
  "aiofiles>=23.0.0",
  "aiohttp>=3.9.0",
  "beautifulsoup4>=4.12.0",
  "chardet>=5.0.0",
  "fastapi>=0.110.0",
  "ftfy>=6.0.0",
  "html2text>=2020.1.16",
  "Pillow>=10.0.0",
  "playwright>=1.40.0",
  "pydantic>=2.0.0",
  "PyYAML>=6.0.0",
  "readability-lxml>=0.8.1",
  "requests>=2.31.0",
  "schedule>=1.2.0",
  "selectolax>=0.3.0",
  "uvicorn[standard]>=0.27.0",
]

[project.scripts]
adapt-fetch = "adapt_fetch.start:main"

[project.urls]
Homepage = "https://github.com/lightread/adapt-fetch"
Repository = "https://github.com/lightread/adapt-fetch"

[tool.setuptools.packages.find]
where = ["."]
include = ["adapt_fetch*"]
